classDiagram
    class Project {
        +id: int
        +name: str
        +created_at: datetime
        +__init__(name: str)
    }
    
    class ProjectFile {
        +id: int
        +project_id: int
        +file_path: str
        +status: str
        +__init__(project_id: int, file_path: str, status: str)
    }
    
    class AnalysisResult {
        +id: int
        +project_id: int
        +analyzer: str
        +result_json: dict
        +created_at: datetime
        +__init__(project_id: int, analyzer: str, result_json: dict)
    }
    
    class ProjectsAPI {
        +trigger_analysis(project_id: int) -> dict
        +get_analyses(project_id: int) -> list[dict]
    }
    
    class SlitherTask {
        +run_slither(project_id: int) -> None
        -_get_project_files(project_id: int) -> list[str]
        -_execute_slither(project_dir: str) -> dict
        -_store_results(project_id: int, results: dict) -> None
    }
    
    Project "1" -- "*" ProjectFile : has
    Project "1" -- "*" AnalysisResult : has
    ProjectsAPI --|> Project : uses
    SlitherTask --|> ProjectFile : reads
    SlitherTask --|> AnalysisResult : creates